Minor whitespace fixes

--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -23,8 +23,8 @@
 }
 
 .sidebar-collections {
-  font-size: 0;
   list-style: none;
+  margin: 0;
   padding: 0 0 4px;
 }
 
